--- a/index.html
+++ b/index.html
@@ -21,26 +21,51 @@
                     class="bg-blue-400 hover:bg-blue-500 focus:bg-blue-500 text-white px-4 py-2 rounded shadow hover:shadow-lg focus:shadow-lg mb-2"
                     aria-haspopup="true"
                     aria-expanded="false"
+                    aria-controls="dropdownMenu"
                     id="dropdownButton"
                 >
-                    Open
+                    Open Menu
                 </button>
-                <div
-                    class="bg-white rounded shadow absolute"
+                <ul
+                    class="bg-white rounded shadow absolute leading-loose"
                     aria-labelledby="dropdownButton"
+                    id="dropdownMenu"
+                    role="menu"
                 >
-                    <ul class="leading-loose">
-                        <li class="hover:bg-gray-200">
-                            <a class="inline-flex px-4 py-2" href="#">Menu Item One</a>
-                        </li>
-                        <li class="hover:bg-gray-200">
-                            <a class="inline-flex px-4 py-2" href="#">Menu Item Two</a>
-                        </li>
-                        <li class="hover:bg-gray-200 border-t border-gray-300">
-                            <a class="inline-flex px-4 py-2" href="#">Menu Item Three</a>
-                        </li>
-                    </ul>
-                </div>
+                    <li 
+                        class="hover:bg-gray-200"
+                        role="none"
+                    >
+                        <a
+                            class="inline-flex px-4 py-2" href="#"
+                            role="menuitem"
+                        >
+                            Menu Item One
+                        </a>
+                    </li>
+                    <li 
+                        class="hover:bg-gray-200"
+                        role="none"
+                    >
+                        <a
+                            class="inline-flex px-4 py-2" href="#"
+                            role="menuitem"
+                        >
+                            Menu Item Two
+                        </a>
+                    </li>
+                    <li 
+                        class="hover:bg-gray-200 border-t border-gray-300"
+                        role="none"
+                    >
+                        <a
+                            class="inline-flex px-4 py-2" href="#"
+                            role="menuitem"
+                        >
+                            Menu Item Three
+                        </a>
+                    </li>
+                </ul>
             
             </div>
         </main>
